--- a/css/estilos1.css
+++ b/css/estilos1.css
@@ -3,6 +3,9 @@
     color: rgb(75, 75, 75);
     transition: ease 0.2s;
 }
+p{
+    text-align: center;
+}
 img{
     width: 75%;
     margin-top: 10px;
@@ -16,4 +19,88 @@ fieldset{
 }
 h2{
 text-align: center;
+}
+.campo{
+    width: 400px;
+    padding: 15px;
+    background: rgb(160, 152, 116); 
+}
+
+.campo-dni{
+    margin-top: 15px;
+    border-top: 2px solid black;
+    border-left: 2px solid black;
+    border-right: 2px solid black;
+}
+.campo-nombre{
+    border-left: 2px solid black;
+    border-right: 2px solid black;
+}
+.campo-apellidos{
+    border-right: 2px solid black;
+    border-left: 2px solid black;
+}
+.campo-direccion{
+    border-right: 2px solid black;
+    border-left: 2px solid black;
+}
+.campo-tlf{
+    border-right: 2px solid black;
+    border-left: 2px solid black;
+    border-bottom: 2px solid black;
+}
+.campo-continente1 {
+    margin-top: 30px;
+    border-top: 2px solid black;
+    border-left: 2px solid black;
+    border-right: 2px solid black;
+}
+.campo-continente2 {
+    border-right: 2px solid black;
+    border-left: 2px solid black;
+}
+.campo-continente3 {
+    border-right: 2px solid black;
+    border-left: 2px solid black;
+}
+.campo-continente4 {
+    border-right: 2px solid black;
+    border-left: 2px solid black;
+    border-bottom: 2px solid black;
+}
+
+.campo-pais1{
+    margin-top: 30px;
+    border-top: 2px solid black;
+    border-left: 2px solid black;
+    border-right: 2px solid black;
+}
+.campo-pais2{
+    border-right: 2px solid black;
+    border-left: 2px solid black;
+}
+.campo-pais3{
+    border-right: 2px solid black;
+    border-left: 2px solid black;
+}
+
+.campo-pais4{
+    border-right: 2px solid black;
+    border-left: 2px solid black;
+    border-bottom: 2px solid black;
+}
+
+#eligeContinente{
+    margin-top: 15px;
+    font: bold;
+    position: absolute;
+    top: 300px;
+    left: 550px;
+}
+#eligePais{
+    margin-top: 15px;
+    font: bold;
+    position: absolute;
+    top: 535px;
+    left: 550px;
 }
